--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 /* TITULO: font-family: 'Andada', serif;
 TEXTO: font-family: 'Roboto', sans-serif;*/
 
+ /*
  *{
     border: solid 1px red;
-} 
+} */
 
 body {
     margin : 0px;
