--- a/css/style.css
+++ b/css/style.css
@@ -566,11 +566,15 @@ th {
         height: auto;
     }
 	
-	.titulo p, #tabla1 table tbody tr th , #tabla2 table tbody tr th, #tabla3 table tbody tr th, #tabla4 table tbody tr th , #tabla5 table tbody tr th, #tabla6 table tbody tr th{
+	.titulo p, #tabla1 table tbody tr th , #tabla2 table tbody tr th, #tabla3 table tbody tr th, #tabla4 table tbody tr th , #tabla5 table tbody tr th, #tabla6 table tbody tr th, #plumillas p{
 		font-size:15px;
-	}
+    }
+    
+    #intro{
+        height: auto;
+    }
 	
-	#intro article ul li, #tabla1 table thead tr th, #tabla2 table thead tr th, #p3 h3, #tabla3 table thead tr th, #p4 h3, #p5 h3 #plumillas p, #tabla5 table thead tr th , #tabla6 table thead tr th, .boton h6 a{
+	#intro article ul li, #tabla1 table thead tr th, #tabla2 table thead tr th, #p3 h3, #tabla3 table thead tr th, #p4 h3, #p5 h3 #plumillas p, #tabla5 table thead tr th , #tabla6 table thead tr th, .boton h6 a,{
 		font-size:18px;
 	}
 		
@@ -578,7 +582,7 @@ th {
 		font-size:20px;
 	}
 	
-    .text-sm-15{
+    .text-sm-15, #intro article a h2{
         font-size: 16px !important;
     }
 }
